<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/BC_Extended_Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/overhead_settings_text"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/BusinessCard_extended_image"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_below="@id/BC_Extended_Header"
                tools:srcCompat="@mipmap/pitcure_not_found_foreground" />

            <Button
                android:id="@+id/settings_add_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/BusinessCard_extended_image"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/settings_add_picture_button" />


            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BusinessCard_extended_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="76dp"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="26dp"
                android:text="@string/settings_user_name_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_name_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BusinessCard_extended_image"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/business_card_retracted_name_filler"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/company_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="39dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="35dp"
                android:text="@string/settings_company_name_text"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/company_name_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name_text_field"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/business_card_retracted_companyName_filler"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/company_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="34dp"
                android:text="@string/settings_company_email_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/company_email_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_text_field"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="@string/business_card_extended_companyEmail_filler" />

            <TextView
                android:id="@+id/company_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_email_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="34dp"
                android:text="@string/settings_company_address_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/company_address_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company_email_text_field"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/business_card_extended_companyAddress_filler"
                android:textIsSelectable="true"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/corporate_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_phone_number_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="47dp"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="39dp"
                android:text="@string/settings_corporate_title_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/company_phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_address_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="34dp"
                android:text="@string/settings_phone_number_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/company_phone_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_address_text_field"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/business_card_extended_Number_filler"
                android:textIsSelectable="true"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/user_ct_display"
                android:layout_width="213dp"
                android:layout_height="45dp"
                android:layout_below="@+id/company_phone_text_field"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/settings_ct_display"
                android:textSize="18sp" />

            <Button
                android:id="@+id/settings_apply_button"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/corporate_title_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="132dp"
                android:layout_marginLeft="132dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="131dp"
                android:layout_marginRight="131dp"
                android:text="@string/settings_apply_button_text" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>