<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home_title" />

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_favourites_title" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings_title" />

</menu>